<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="toolbox_title">Evervolv Settings</string>
    <string name="loading">Loading\u2026</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="reset">Reset</string>
    <string name="advanced">Advanced</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="summary_empty" translatable="false"></string>
    <string name="button_settings_title">Buttons</string>
    <string name="disable_navkeys_title">On-screen navigation bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
    <string name="power_key_title">Power button</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Search button</string>
    <string name="appswitch_key_title">Recents button</string>
    <string name="volume_keys_title">Volume buttons</string>
    <string name="button_wake_title">Wake device</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Open/close menu</string>
    <string name="action_app_switch">Recent apps switcher</string>
    <string name="action_search">Search assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_in_app_search">In-app search</string>
    <string name="action_launch_camera">Launch camera</string>
    <string name="action_sleep">Turn screen off</string>
    <string name="action_last_app">Last app</string>
    <string name="action_split_screen">Split screen</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="extras_title">Extras</string>
    <string name="additional_buttons_title">Additional buttons</string>
    <string name="power_menu_title">Power menu actions</string>
    <string name="power_menu_summary">Customize the actions available when you long press the power key</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
    <string name="power_menu_lockdown_title">Lockdown</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="long_screen_settings_title">Full screen apps</string>
    <string name="long_screen_settings_summary">Force legacy apps to use full screen aspect ratio</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="display_rotation_title">Rotation settings</string>
    <string name="display_rotation_enabled">Auto-rotation is enabled</string>
    <string name="display_rotation_disabled">Auto-rotation is disabled</string>
    <string name="display_rotation_unit">degrees</string>
    <string name="display_rotation_category_title">Rotation modes</string>
    <string name="display_rotation_0_title">0 degrees</string>
    <string name="display_rotation_90_title">90 degrees</string>
    <string name="display_rotation_180_title">180 degrees</string>
    <string name="display_rotation_270_title">270 degrees</string>
    <string name="style_title">Style</string>
    <string name="style_summary">Choose system colors</string>
    <string name="style_global_title">Style</string>
    <string name="style_global_entry_automatic">Automatic (wallpaper)</string>
    <string name="style_global_entry_light">Light</string>
    <string name="style_global_entry_dark">Dark</string>
    <string name="style_global_entry_time">Automatic (time of the day)</string>
    <string name="style_global_entry_app">Managed by %1$s</string>
    <string name="style_accent_title">Accent color</string>
    <string name="style_accent_configuration_not_supported">The current accent isn\'t compatible with the selected style. In order to proceed another accent has to be selected, do you want to continue?</string>
    <string name="style_accent_configuration_positive">Proceed</string>
    <string name="style_automagic_title">Automagic</string>
    <string name="style_automagic_description">Tune the style to match your wallpaper</string>
    <string name="style_automagic_dialog_content">Suggested style: <b>%1$s</b> with <b>%2$s</b> accent.\nDo you want to apply it?</string>
    <string name="style_automagic_dialog_positive">Apply</string>
    <string name="style_accent_default_name">Default</string>
    <string name="style_dark_overlay_title">Dark mode</string>
    <string name="style_dark_overlay_default">Default</string>
    <string name="style_dark_overlay_black">Black</string>
    <string name="style_permission_error">Storage access permission is needed to analyze your wallpaper, please grant it to use this feature</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_title">Buttons and layout</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="show_lte_fourgee_title">4G/LTE network icon</string>
    <string name="show_lte_fourgee_summary">Display the 4G or LTE network icon when available in the statusbar</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_disable">Disabled</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units in the statusbar</string>
    <string name="protected_apps_manager_title">Protected apps</string>
    <string name="protected_apps_manager_summary">Manage which apps are hidden behind a secure lock</string>
    <string name="contributors_cloud_fragment_title">Contributors</string>
    <string name="contributors_cloud_loading_message">Loading contributors data\u2026</string>
    <string name="contributors_cloud_failed_message">Cannot load contributors data</string>
    <string name="contributor_info_menu">Contributor info</string>
    <string name="contributor_info_msg">
        <![CDATA[<b>Name:</b> <xliff:g id="name">%1$s</xliff:g><br/><br/>
                 <b>Nick:</b> <xliff:g id="nick">%2$s</xliff:g><br/><br/>
                 <b>Commits:</b> <xliff:g id="commits">%3$s</xliff:g>]]></string>
    <string name="contributions_info_menu">Contributions info</string>
    <string name="contributions_info_msg">
        <![CDATA[<b>Total contributors:</b> <xliff:g id="total_contributors">%1$s</xliff:g><br/><br/>
                 <b>Total commits:</b> <xliff:g id="total_commits">%2$s</xliff:g><br/><br/>
                 <b>Last update:</b> <xliff:g id="date">%3$s</xliff:g>]]></string>
</resources>