<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2014-2015 The CyanogenMod Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="power_menu"
    android:title="@string/power_menu_title">

    <CheckBoxPreference
        android:key="screenshot"
        android:title="@string/power_menu_screenshot_title"
        android:summary="@string/power_menu_screenshot_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="airplane"
        android:title="@string/power_menu_airplane_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="users"
        android:title="@string/power_menu_users_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="bugreport"
        android:title="@string/power_menu_bug_report_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="emergency"
        android:title="@string/power_menu_emergency_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="devicecontrols"
        android:title="@string/power_menu_devicecontrols_title"
        android:defaultValue="false"
        android:enabled="false" />

</PreferenceScreen>
