<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="rotation"
    android:title="@string/display_rotation_title">

    <CheckBoxPreference
        android:key="display_rotation_0"
        android:title="@string/display_rotation_0_title" />

    <CheckBoxPreference
        android:key="display_rotation_90"
        android:title="@string/display_rotation_90_title" />

    <CheckBoxPreference
        android:key="display_rotation_180"
        android:title="@string/display_rotation_180_title" />

    <CheckBoxPreference
        android:key="display_rotation_270"
        android:title="@string/display_rotation_270_title" />

</PreferenceScreen>
