<?xml version="1.0" encoding="UTF-8"?>
<!--
     SPDX-FileCopyrightText: 2014-2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2018,2021 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:evervolv="http://schemas.android.com/apk/res-auto"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <PreferenceCategory
        android:key="status_bar_quick_settings"
        android:title="@string/status_bar_quick_settings_title">

        <ListPreference
            android:key="qs_quick_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown_title"
            android:entries="@array/status_bar_quick_qs_pulldown_entries"
            android:entryValues="@array/status_bar_quick_qs_pulldown_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_icons"
        android:title="@string/status_bar_icons_title">

        <Preference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery"
        android:title="@string/status_bar_battery_title">

        <ListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="status_bar_battery_percentage"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="@string/status_bar_battery_percentage_summary" />

    </PreferenceCategory>

</PreferenceScreen>
