<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017-2023 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/network_traffic_mode_entries"
        android:entryValues="@array/network_traffic_mode_values"
        android:key="network_traffic_mode"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/network_traffic_mode_title" />

    <evervolv.preference.EVSecureSettingSwitchPreference
        android:defaultValue="false"
        android:key="network_traffic_autohide"
        android:summary="@string/network_traffic_autohide_summary"
        android:title="@string/network_traffic_autohide" />

    <ListPreference
        android:entries="@array/network_traffic_units_entries"
        android:entryValues="@array/network_traffic_units_values"
        android:key="network_traffic_units"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/network_traffic_units_title" />

    <evervolv.preference.EVSecureSettingSwitchPreference
        android:defaultValue="true"
        android:key="network_traffic_show_units"
        android:summary="@string/network_traffic_show_units_summary"
        android:title="@string/network_traffic_show_units" />

</PreferenceScreen>
