<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project
                   2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     The parts catalog is used to locate items (usually a PreferenceScreen) inside
     of LineageParts. This can be used by LineagePartsPreference to create a simple, two-line
     entry point from Settings or another application. All entries should specify
     a fragment, which is a SettingsPreferenceFragment subclass inside LineageParts.

     Metadata for the search index provider should be provided for all parts. This
     can be supplied an XML resource in the "lineage:xmlRes" attribute or by implementing
     the Searchable interface.
-->
<parts-catalog xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform">

    <part android:key="button_settings"
          android:title="@string/button_settings_title"
          android:fragment="com.evervolv.toolbox.input.ButtonSettings"
          evervolv:xmlRes="@xml/button_settings" />

    <part android:key="power_menu"
          android:title="@string/power_menu_title"
          android:fragment="com.evervolv.toolbox.input.PowerMenuActions"
          evervolv:xmlRes="@xml/power_menu_settings" />

    <part android:key="long_screen_settings"
          android:title="@string/long_screen_settings_title"
          android:summary="@string/long_screen_settings_summary"
          android:fragment="com.evervolv.toolbox.applications.LongScreenSettings"
          evervolv:xmlRes="@xml/long_screen_prefs" />

    <part android:key="rotation"
          android:title="@string/display_rotation_title"
          android:fragment="com.evervolv.toolbox.display.RotationSettings"
          evervolv:xmlRes="@xml/display_rotation" />

    <part android:key="style"
          android:title="@string/style_title"
          android:summary="@string/style_summary"
          android:fragment="com.evervolv.toolbox.style.StylePreferences"
          evervolv:xmlRes="@xml/style_preferences" />

</parts-catalog>
